--- a/site web sti/author.html
+++ b/site web sti/author.html
@@ -2,14 +2,12 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
+		<link rel="stylesheet" href="./styles/style.css" />
 		<title>Campus Quicksilver Europe</title>
 	</head>
 	<body>
 		<h1>Campus Quicksilver Europe</h1>
 		<h2>Présentation de l'auteur et Sources</h2>
-		<div class="adress">
-			<p>162 Rue Belharra, 64500<br />Saint-Jean-de-Luz</p>
-		</div>
 		<nav>
 			<ul>
 				<li><a href="./index.html">Présentation du batiment</a></li>
@@ -17,5 +15,12 @@
 				<li><a href="./author.html">Présentation de l'auteur et sources</a></li>
 			</ul>
 		</nav>
+		<div class="text">
+			<p>Le créateur de ce site est Jérémy Boureux, élève de 1 STIDD au lycée Clos-Maire</p>
+			<ul>
+				Sources:
+				<li><a href="http://arotcharen-architecte.fr/project/30979/" target="blank">Agence d'architecture ayant créé le batiment</a></li>
+			</ul>
+		</div>
 	</body>
 </html>
