--- a/site web sti/index.html
+++ b/site web sti/index.html
@@ -8,9 +8,7 @@
 	<body>
 		<h1>Campus Quicksilver Europe</h1>
 		<h2>Présentation du Batiment</h2>
-		<div class="adress">
-			<p>162 Rue Belharra, 64500<br />Saint-Jean-de-Luz</p>
-		</div>
+
 		<nav>
 			<ul>
 				<li><a href="./index.html">Présentation du batiment</a></li>
@@ -18,5 +16,17 @@
 				<li><a href="./author.html">Présentation de l'auteur et sources</a></li>
 			</ul>
 		</nav>
+		<img class="pres1" src="./images/pres1.jpg" alt="Image du batiment." />
+		<div class="text">
+			<p>Le Campus QuickSilver Europe est le siège social en France de QuickSilver Na Pali.</p>
+			<p>
+				Quiksilver est une entreprise et marque américaine de textiles et accesoires mondialement connue. 
+			</p>
+			<p>
+				Cet édifice de 15000 m² situé à Saint-Jean-de-Luz et réalisé par le cabinet d'architecture Patrick Arotcharen à pour objectif de meler bureaux et nature.
+				<br>
+				Pour cela, de multiples techniques ont été utilisées pour rendre à la fois le cadre agréable pour les quelques 600 employés de bureau mais aussi pour respecter l'environnement.
+			</p>
+		</div>
 	</body>
 </html>
